<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout android:weightSum="1
" android:orientation="vertical"
        android:background="#ffffff"
        
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="Enter Meal Title"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/mealtitle"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:text="Meal Description" android:textStyle="bold" android:textAlignment="center"/>

    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/mealDescription"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:text="Enter Ingredients" android:textStyle="bold" android:textAlignment="center"/>

    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/Ingredients"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:text="Enter Price" android:textStyle="bold"/>

    <EditText android:layout_height="wrap_content" android:layout_width="93dp" android:id="@+id/price" android:inputType="number"/>


    <LinearLayout android:weightSum="1" android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="match_parent">

        <Button
            android:id="@+id/getPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.18"
            android:background="@drawable/button_gradient"
            android:text="Select Image" />

    <Button android:background="@drawable/button_gradient" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Camera" android:id="@+id/takePic"/>

    <Button android:background="@drawable/button_gradient" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Serve!" android:id="@+id/subImage" android:layout_weight="0.21"/>

</LinearLayout>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="No image selected yet" android:id="@+id/picUrl" android:textColor="@android:color/holo_red_dark" android:layout_below="@+id/getPic"/>

    <ImageView android:layout_height="130dp" android:layout_width="350dp" android:id="@+id/imageView" android:scaleType="centerCrop"/>

</LinearLayout>
</ScrollView>